--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -37,7 +37,7 @@ jobs:
       run: docker build -t ${{ secrets.DOCKERHUB_USERNAME}}/GradleSample01 .
 
     - name: docker login
-      uses: docker/login-actions@v2
+      uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
